--- a/CloudLibrary.csproj
+++ b/CloudLibrary.csproj
@@ -30,6 +30,7 @@
 	  <PackageReference Include="Microsoft.Extensions.Http" Version="5.0.0" />
 	  <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
 	  <PackageReference Include="System.Configuration.ConfigurationManager" Version="4.7.0" />
+	  <PackageReference Include="System.Text.Json" Version="5.0.1" />
   </ItemGroup>
   <ItemGroup>
 	<Compile Update="Properties\settings.Designer.cs">
