--- a/CloudLibrary.csproj
+++ b/CloudLibrary.csproj
@@ -29,6 +29,7 @@
 	  <PackageReference Include="Microsoft.Extensions.Hosting" Version="5.0.0" />
 	  <PackageReference Include="Microsoft.Extensions.Http" Version="5.0.0" />
 	  <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+	  <PackageReference Include="System.Security.AccessControl" Version="5.0.0" />
   </ItemGroup>
   <ItemGroup>
 	<Compile Update="Properties\settings.Designer.cs">
