--- a/appsettings.json
+++ b/appsettings.json
@@ -6,5 +6,12 @@
 			"Microsoft": "Warning",
 			"Microsoft.Hosting.Lifetime": "Information"
 		}
-	}
+	},
+	"Settings": {
+		"FlexAppVersion": "3.51.3.3.0",
+		"DeviceModel": "SM-G977N",
+		"OSVersion": "7.1.2",
+		"BuildVersion": "N2G48C",
+		"AwsAccountId": "320132171574"
+	} 
 }
