--- a/CloudLibrary.csproj
+++ b/CloudLibrary.csproj
@@ -23,7 +23,6 @@
 	  <PackageReference Include="AWSSDK.DynamoDBv2" Version="3.5.4.18" />
 	  <PackageReference Include="Amazon.Lambda.Core" Version="1.2.0" />
 	  <PackageReference Include="AWSSDK.SQS" Version="3.5.1.27" />
-
-	  <PackageReference Include="Microsoft.Extensions.Http" Version="5.0.0" />
+	  <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
   </ItemGroup>
 </Project>
