--- a/CloudLibrary.csproj
+++ b/CloudLibrary.csproj
@@ -24,5 +24,12 @@
 	  <PackageReference Include="Amazon.Lambda.Core" Version="1.2.0" />
 	  <PackageReference Include="AWSSDK.SQS" Version="3.5.1.27" />
 	  <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+
+	  <!-- Failing on optimization on Amazon linux. Probably the packages are not linux compiling.
+	  This are used for the appsettings.json and the dependency injection of the projects.
+	  -->
+	  <PackageReference Include="Microsoft.Extensions.Configuration" Version="5.0.0" />
+	  <PackageReference Include="Microsoft.Extensions.Hosting" Version="5.0.0" />
+	  <PackageReference Include="Microsoft.Extensions.Http" Version="5.0.0" />
   </ItemGroup>
 </Project>
