--- a/Properties/launchSettings.json
+++ b/Properties/launchSettings.json
@@ -3,6 +3,12 @@
     "Debug": {
       "commandName": "Executable",
       "executablePath": "C:\\Users\\Sudo\\Desktop\\Development\\BlockInService\\Tech\\SearchEngines\\CloudLibrary\\bin\\Debug\\netcoreapp3.1\\CloudLibrary.exe"
+    },
+    "Mock Lambda Test Tool": {
+      "commandName": "Executable",
+      "commandLineArgs": "--port 5050",
+      "workingDirectory": ".\\bin\\$(Configuration)\\netcoreapp3.1",
+      "executablePath": "%USERPROFILE%\\.dotnet\\tools\\dotnet-lambda-test-tool-3.1.exe"
     }
   }
 }
